# ajna_api

./: .gitignore  pyproject.toml  setup.py  supervisor_apiajna.conf  supervisor_integracao.conf  tox.ini  wsgi.py  wsgi_production.py
.github/workflows/: test.yml
ajna_commons/flask/: api_login.py
ajnaapi/: config.py  endpoints.py  main.py  openapi.yaml  poll_events.py  utils.py
ajnaapi/bhadrasanaapi/: routes.py
ajnaapi/cadastrosapi/: routes.py
ajnaapi/dueapi/: __init__.py  routes.py
ajnaapi/mercanteapi/: __init__.py  routes.py
ajnaapi/paths/: emissaofma.yaml
ajnaapi/recintosapi/: generate_yaml.py  maschemas.py  models.py  models_extra.py  routes.py  usecases.py
ajnaapi/templates/: index.html
ajnaapi/virasanaapi/: routes.py
notebooks/: PostJSONWithHttpURLConnection.java  Teste interativo API Login Certificado.html  Teste interativo API Login Certificado.ipynb  Teste interativo API.ipynb  integracao_aniita.py  integracao_aniita_simplificado.py
tests/: base_api_test.py  bhadrasanaapi_test.py  cadastrosapi_test.py  endpoints_test.py  login_test.py  mercanteapi_test.py  recintosapi_test.py  test_due_endpoints.py  test_model_recintos.py  test_poll_events.py
